test/analyze/attributes/builtin.myte
module test

@(Builtin)
fun func()

@(Builtin)
val global: Int = 1

@(Builtin)
type Type (Int)

@(Builtin)
trait Trait {}

@(Builtin)
methods Type {
  @(Builtin)
  fun method()
}

fun main() {}